# Web-Browser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
scripts/: reinstall_package.sh  reinstall_test_package.sh  upload_to_pypi.sh
src/browserdriver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/browsing/: __init__.py  driver.py  main.py
src/browsing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/browsing/chrome/: __init__.py  background_process.py  chrome.py  window.py
src/browsing/components/: __init__.py  element.py
src/browsing/gamepad/: __init__.py  gamepad.py
src/browsing/gamepad/components/: base.py  buttons.py  directional_pad.py  joystick.py  menu.py  shoulder.py
src/browsing/gamepad/xbox/: xbox.py
src/webdriver/: __init__.py  driver.py
src/webdriver/chrome/: __init__.py  chrome.py  extension.py  profile.py
src/webdriver/components/: __init__.py
src/webdriver/gamepad/: __init__.py  gamepad.py
src/webdriver/gamepad/browser/: __init__.py  connect.js  disconnect.js  gamepad_simulator.js  update.js
src/webdriver/gamepad/components/: __init__.py  base.py  buttons.py  directional_pad.py  event.py  joystick.py  menu.py  shoulder.py
src/webdriver/gamepad/xbox/: xbox.py
tests/chrome/: test_chrome.py
tests/extensions/: Dark-Reader.crx
