[metadata]
name = web_browser
version = 0.0.1
test_version = 0.0.1
production_version = 0.0.1
author = Mauricio
author_email = dev.mauricio.lomeli@gmail.com
description = This application is a library for automating with Selenium.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjlomeli/Web-Browser
project_urls =
    Bug Tracker = https://github.com/mjlomeli/Web-Browser/issues
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    wheel
    requests==2.*
    selenium==4.*
    beautifulsoup4==4.*

[options.packages.find]
where = src


# Just Dev Dependencies (e.g. not for production)
[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
web_browser = py.typed

[flake8]
max-line-length = 160
